--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "@hilla/react-components": "1.3.7",
     "@polymer/iron-icon": "3.0.1",
     "@polymer/polymer": "3.5.1",
-    "@ui5/webcomponents": "^1.11.0",
-    "@ui5/webcomponents-fiori": "^1.11.0",
-    "@ui5/webcomponents-react": "^1.10.0",
     "@vaadin-component-factory/vcf-nav": "1.0.6",
     "@vaadin/bundles": "23.3.7",
     "@vaadin/common-frontend": "0.0.17",
@@ -93,10 +90,7 @@
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
     "@hilla/generator-typescript-plugin-backbone": "$@hilla/generator-typescript-plugin-backbone",
     "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli",
-    "@ui5/webcomponents": "$@ui5/webcomponents",
-    "@ui5/webcomponents-fiori": "$@ui5/webcomponents-fiori",
-    "@ui5/webcomponents-react": "$@ui5/webcomponents-react"
+    "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli"
   },
   "vaadin": {
     "dependencies": {
@@ -144,6 +138,6 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "530a1333355db5e8b66a9cb1f61b02632978ebb42f7ffbaaea49c40f2d028038"
+    "hash": "f0752cd85659ed65afc57cbe633afcbbfa2e15537a77d7867a77e533b97b9c7a"
   }
 }
